// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<div
  styleName="tag"
>
  <span>
    Some Label
  </span>
  <FaClose
    onClick={[Function]}
    onKeyPress={[Function]}
    styleName="icon"
    tabIndex="0"
  />
</div>
`;

exports[`should render correctly when is being deleted 1`] = `
<div
  styleName="tag"
>
  <span>
    Some Label
  </span>
  <div
    styleName="loader"
  >
    <Loader
      size="small"
      type="inverse"
    />
  </div>
</div>
`;
